сделал добычу отита работоспособной

--- a/States/States.csproj
+++ b/States/States.csproj
@@ -252,7 +252,7 @@
     <Compile Include="StateGT055.cs" />
     <Compile Include="StateGT056.cs" />
     <Compile Include="StateGT057.cs" />
-    <Compile Include="StateGT751.cs" />
+    <Compile Include="StateGT075a.cs" />
     <Compile Include="StateGT093.cs" />
     <Compile Include="StateGT092.cs" />
     <Compile Include="StateGT091.cs" />
