--- a/States/States.csproj
+++ b/States/States.csproj
@@ -45,6 +45,12 @@
     <Compile Include="IState.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StateDriver.cs" />
+    <Compile Include="StateGT533.cs" />
+    <Compile Include="StateGT532.cs" />
+    <Compile Include="StateGT531.cs" />
+    <Compile Include="StateGT530.cs" />
+    <Compile Include="StateGT529.cs" />
+    <Compile Include="StateGT528.cs" />
     <Compile Include="StateGT527.cs" />
     <Compile Include="StateGT526.cs" />
     <Compile Include="StateGT525.cs" />
