--- a/States/States.csproj
+++ b/States/States.csproj
@@ -45,7 +45,9 @@
     <Compile Include="IState.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StateDriver.cs" />
+    <Compile Include="StateGT266a.cs" />
     <Compile Include="StateGT268.cs" />
+    <Compile Include="StateGT271.cs" />
     <Compile Include="StateGT270.cs" />
     <Compile Include="StateGT269.cs" />
     <Compile Include="StateGT533.cs" />
