--- a/States/States.csproj
+++ b/States/States.csproj
@@ -45,6 +45,7 @@
     <Compile Include="IState.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StateDriver.cs" />
+    <Compile Include="StateGT329.cs" />
     <Compile Include="StateGT266a.cs" />
     <Compile Include="StateGT268.cs" />
     <Compile Include="StateGT277.cs" />
