--- a/States/States.csproj
+++ b/States/States.csproj
@@ -45,6 +45,10 @@
     <Compile Include="IState.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StateDriver.cs" />
+    <Compile Include="StateGT402.cs" />
+    <Compile Include="StateGT403.cs" />
+    <Compile Include="StateGT404.cs" />
+    <Compile Include="StateGT405.cs" />
     <Compile Include="StateGT499.cs" />
     <Compile Include="StateGT401.cs" />
     <Compile Include="StateGT329.cs" />
