Делаю смену аккаунтов в чистом окне. Часть 2. До отладки

--- a/States/States.csproj
+++ b/States/States.csproj
@@ -46,6 +46,8 @@
     <Compile Include="IState.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StateDriver.cs" />
+    <Compile Include="StateGT171.cs" />
+    <Compile Include="StateGT308.cs" />
     <Compile Include="StateGT402.cs" />
     <Compile Include="StateGT403.cs" />
     <Compile Include="StateGT404.cs" />
