Добавил целое семейство объектов Heroю Далее буду переделывать все методы под использование этих объектов

--- a/OpenGEWindows/OpenGEWindows.csproj
+++ b/OpenGEWindows/OpenGEWindows.csproj
@@ -123,6 +123,22 @@
     <Compile Include="GoldenEggAmerica2.cs" />
     <Compile Include="GoldenEggEuropa2.cs" />
     <Compile Include="Hero.cs" />
+    <Compile Include="HeroCecille.cs" />
+    <Compile Include="HeroCalipso.cs" />
+    <Compile Include="HeroLoraConstans.cs" />
+    <Compile Include="HeroJaina.cs" />
+    <Compile Include="HeroAither.cs" />
+    <Compile Include="HeroDivineHammerBryan.cs" />
+    <Compile Include="HeroRebecca.cs" />
+    <Compile Include="HeroLorch.cs" />
+    <Compile Include="HeroMiho.cs" />
+    <Compile Include="HeroJane.cs" />
+    <Compile Include="HeroRJD.cs" />
+    <Compile Include="HeroSuperRomina.cs" />
+    <Compile Include="HeroVanshee.cs" />
+    <Compile Include="HeroMCalipso.cs" />
+    <Compile Include="HeroMarie.cs" />
+    <Compile Include="HeroRosie.cs" />
     <Compile Include="HeroMLorch.cs" />
     <Compile Include="HeroFactory.cs" />
     <Compile Include="HeroBernelli.cs" />
